--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<h1>QMan was here</h1>
+<html>
+	<body>
+		<link rel="stylesheet" href="/css/main.css"/>
+		<h1>QMan was here</h1>
+	</body>
+</html>
