--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
 		<link rel="stylesheet" href="/css/main.css"/>
-		<h1>QMan was here</h1>
+		<div href="whitelist">QMan was here</div>
 	</body>
 </html>
