--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
 		<link rel="stylesheet" href="/css/main.css"/>
-		<div href="whitelist">QMan was here</div>
+		<a href="whitelist">Whitelist</a>
 	</body>
 </html>
