--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 	<body>
 		<link rel="stylesheet" href="/css/main.css"/>
 		<a class="link" href="rules">Правила сервера</a>
-		<a class="link" href="commands">Доступные команды</a>
-		<a class="link" href="whitelist">Белый список</a>
-		<a class="link" href="banned">Список забаненных</a>
+		<a class="link" href="commands">Список команд</a>
+		<a class="link" href="whitelist">Список допущенных игроков</a>
+		<a class="link" href="banned">Заблокированные игроки</a>
 	</body>
 </html>
