--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -1,15 +1,19 @@
 <html>
 	<body>
 		<link rel="stylesheet" href="../css/main.css"/>
-		<table>
-			<tr>
-				<th>QMan was here</th>
-				<th>Testing 1</th>
-				<th>Testing 2</th>
-				<th>Testing 3</th>
-				<th>Testing 4</th>
-			</tr>
-		...
-		</table>
+			<table>
+				<tr>
+					<th>Роль</th>
+					<th>Внутриигровой ник</th>
+					<th>Discord</th>
+					<th>Дата появления</th>
+					</tr>
+				<tr>
+					<td>Администратор</td>
+					<td>_QMan</td>
+					<td>QMan#8191</td>
+					<td>-</td>
+				</tr>
+			</table>
 	</body>
 </html>
