--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -6,7 +6,7 @@
 					<th>Роль</th>
 					<th>Внутриигровой ник</th>
 					<th>Discord</th>
-					<th>Дата появления</th>
+					<th>Дата добавления в белый список</th>
 					</tr>
 				<tr>
 					<td>Администратор</td>
