--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -14,6 +14,12 @@
 					<td>QMan#8191</td>
 					<td>-</td>
 				</tr>
+				<tr>
+					<td>Модератор</td>
+					<td>CarelessAngie</td>
+					<td>Angie Aome#4705</td>
+					<td>22.01.2020</td>
+				</tr>
 			</table>
 	</body>
 </html>
