--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -6,7 +6,7 @@
 					<th>Роль</th>
 					<th>Внутриигровой ник</th>
 					<th>Discord</th>
-					<th>Дата добавления в белый список</th>
+					<th>Дата добавления</th>
 					</tr>
 				<tr>
 					<td>Администратор</td>
@@ -18,7 +18,115 @@
 					<td>Модератор</td>
 					<td>CarelessAngie</td>
 					<td>Angie Aome#4705</td>
-					<td>22.01.2020</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>pruf</td>
+					<td>pruf#8502</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>SYHNR</td>
+					<td>YHN#7969</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>CESAAAR</td>
+					<td>Иностранный шпион Миль Папс#6863</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>papap1</td>
+					<td>f0r4g3m0n#3714</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>Schtil</td>
+					<td>Schtil#9230</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>Jusk</td>
+					<td>Сайтама | One-Punch Man#4504</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>Liinkarto</td>
+					<td>Liinkarto#6358</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>Vanlige</td>
+					<td>renicodav#2061</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Модератор</td>
+					<td>ImrHeadCrabI</td>
+					<td>HeadCrab#3314</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>fredyfos</td>
+					<td>fredy#5549</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>n_altovsky</td>
+					<td>Nick Altovsky#2956</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>Psychoman</td>
+					<td>Psychoman#2404</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>ArtemM</td>
+					<td>Artem M#2910</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>BankRot</td>
+					<td>BankRot(ru)#3955</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>Rad1ubit</td>
+					<td>Rad1ubit#0211</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>eltyan</td>
+					<td>Акридерм#6054</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>FAILD330</td>
+					<td>Faild333#2799</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>Игрок</td>
+					<td>_DAD42_</td>
+					<td>DAD42#6710</td>
+					<td>-</td>
 				</tr>
 			</table>
 	</body>
