--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -9,13 +9,13 @@
 					<th>Дата добавления</th>
 					</tr>
 				<tr>
-					<td>Администратор</td>
+					<td class="admin">Администратор</td>
 					<td>_QMan</td>
 					<td>QMan#8191</td>
 					<td>-</td>
 				</tr>
 				<tr>
-					<td>Модератор</td>
+					<td class="mod">Модератор</td>
 					<td>CarelessAngie</td>
 					<td>Angie Aome#4705</td>
 					<td>-</td>
@@ -69,7 +69,7 @@
 					<td>-</td>
 				</tr>
 				<tr>
-					<td>Модератор</td>
+					<td class="mod">Модератор</td>
 					<td>ImrHeadCrabI</td>
 					<td>HeadCrab#3314</td>
 					<td>-</td>
