--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -1,6 +1,9 @@
 <html>
-	<body>
+	<head>
 		<link rel="stylesheet" href="../css/main.css"/>
+	</head>
+	<body>
+			<h1>Список всех игроков в текущем белом списке</h1>
 			<table>
 				<tr class="border_bottom">
 					<th>Роль</th>
