--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="../css/main.css"/>
+		<script type="text/javascript" src="../js/sortabletable.js"></script>
 	</head>
 	<body>
 			<h1>Список всех игроков в текущем белом списке</h1>
