--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -7,10 +7,10 @@
 			<h1>Список всех игроков в текущем белом списке</h1>
 			<table>
 				<tr class="border_bottom">
-					<th>Роль</th>
-					<th>Внутриигровой ник</th>
-					<th>Discord</th>
-					<th>Дата добавления</th>
+					<th onclick="sortTable(0)">Роль</th>
+					<th onclick="sortTable(0)">Внутриигровой ник</th>
+					<th onclick="sortTable(0)">Discord</th>
+					<th onclick="sortTable(0)">Дата добавления</th>
 					</tr>
 				<tr class="border_bottom">
 					<td class="admin">Администратор</td>
