--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 			<h1>Список всех игроков в текущем белом списке</h1>
-			<table>
+			<table id="whitelist">
 				<tr class="border_bottom">
 					<th onclick="sortTable(0)">Роль</th>
 					<th onclick="sortTable(1)">Внутриигровой ник</th>
