--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -20,7 +20,7 @@
 				</tr>
 				<tr class="border_bottom">
 					<td class="mod">Модератор</td>
-					<td>CarelessAngie</td>
+					<td class="angie">CarelessAngie</td>
 					<td>Angie Aome#4705</td>
 					<td>-</td>
 				</tr>
