--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
-	<body>
+	<head>
 		<link rel="stylesheet" href="/css/main.css"/>
+	</head>
+	<body>
 		<a class="link" href="rules">Правила сервера</a>
 		<a class="link" href="commands">Список команд</a>
 		<a class="link" href="whitelist">Список допущенных игроков</a>
