--- a/rules/index.html
+++ b/rules/index.html
@@ -3,6 +3,7 @@
 		<link rel="stylesheet" href="../css/main.css"/>
 	</head>
 	<body>
-			<h1>Правила сервера</h1>
+		<h1>Правила сервера</h1>
+		Testing thing
 	</body>
 </html>
