--- a/rules/index.html
+++ b/rules/index.html
@@ -4,9 +4,11 @@
 	</head>
 	<body>
 		<h1>Правила сервера</h1>
-		Testing thing
-		Testing thing 2
-		Testing thing 3
-		Testing thing 4
+		<ul>
+			<li>Testing thing</li>
+			<li>Testing thing 2</li>
+			<li>Testing thing 3</li>
+			<li>Testing thing 4</li>
+		</ul>
 	</body>
 </html>
