--- a/rules/index.html
+++ b/rules/index.html
@@ -4,11 +4,13 @@
 	</head>
 	<body>
 		<h1>Правила сервера</h1>
-		<ul>
-			<li>Testing thing</li>
-			<li>Testing thing 2</li>
-			<li>Testing thing 3</li>
-			<li>Testing thing 4</li>
-		</ul>
+		<div>
+			<ul>
+				<li>Testing thing</li>
+				<li>Testing thing 2</li>
+				<li>Testing thing 3</li>
+				<li>Testing thing 4</li>
+			</ul>
+		</div>
 	</body>
 </html>
