--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<h1>Список всех игроков в текущем белом списке</h1>
-		<table id="whitelist">
+		<table id="table">
 			<tr class="border_bottom">
 				<th onclick="sortTable(0)">Роль</th>
 				<th onclick="sortTable(1)">Внутриигровой ник</th>
@@ -19,7 +19,7 @@
 				<td>-</td>
 			</tr>
 			<tr class="border_bottom">
-				<td class="mod">Модератор</td>
+				<td class="mod"><span>Б</span>Модератор</td>
 				<td class="angie">CarelessAngie</td>
 				<td>Angie Aome#4705</td>
 				<td>-</td>
@@ -73,7 +73,7 @@
 				<td>-</td>
 			</tr>
 			<tr class="border_bottom">
-				<td class="mod">Модератор</td>
+				<td class="mod"><span>Б</span>Модератор</td>
 				<td>ImrHeadCrabI</td>
 				<td>HeadCrab#3314</td>
 				<td>-</td>
