--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -19,7 +19,7 @@
 				<td>-</td>
 			</tr>
 			<tr class="border_bottom">
-				<td class="mod"><span>Б</span>Модератор</td>
+				<td class="mod"><span style="display: none;">Б</span>Модератор</td>
 				<td class="angie">CarelessAngie</td>
 				<td>Angie Aome#4705</td>
 				<td>-</td>
@@ -73,7 +73,7 @@
 				<td>-</td>
 			</tr>
 			<tr class="border_bottom">
-				<td class="mod"><span>Б</span>Модератор</td>
+				<td class="mod"><span style="display: none;">Б</span>Модератор</td>
 				<td>ImrHeadCrabI</td>
 				<td>HeadCrab#3314</td>
 				<td>-</td>
