--- a/banned/index.html
+++ b/banned/index.html
@@ -5,6 +5,7 @@
 		<script type="text/javascript" src="../js/sortabletable.js"></script>
 	</head>
 	<body>
+		<div class="header">test</div>
 		<h1>Список всех заблокированных игроков</h1>
 		<table id="table">
 			<tr class="border_bottom">
