--- a/banned/index.html
+++ b/banned/index.html
@@ -5,7 +5,12 @@
 		<script type="text/javascript" src="../js/sortabletable.js"></script>
 	</head>
 	<body>
-		<div class="header">test</div>
+		<div class="header">
+			<a href="rules">Правила</a>
+			<a href="commands">Команды</a>
+			<a href="whitelist">Игроки</a>
+			<a href="blocked">Заблокированные</a>
+		</div>
 		<h1>Список всех заблокированных игроков</h1>
 		<table id="table">
 			<tr class="border_bottom">
