--- a/banned/index.html
+++ b/banned/index.html
@@ -6,10 +6,10 @@
 	</head>
 	<body>
 		<div class="header">
-			<a href="rules">Правила</a>
-			<a href="commands">Команды</a>
-			<a href="whitelist">Игроки</a>
-			<a href="blocked">Заблокированные</a>
+			<a class="header-links" href="../rules">Правила</a>
+			<a class="header-links" href="../commands">Команды</a>
+			<a class="header-links" href="../whitelist">Игроки</a>
+			<a class="header-links" href="../blocked">Заблокированные</a>
 		</div>
 		<h1>Список всех заблокированных игроков</h1>
 		<table id="table">
