--- a/rules/index.html
+++ b/rules/index.html
@@ -3,6 +3,12 @@
 		<link rel="stylesheet" href="../css/main.css"/>
 	</head>
 	<body>
+		<div class="header">
+			<a class="header-links" href="../rules">Правила</a>
+			<a class="header-links" href="../commands">Команды</a>
+			<a class="header-links" href="../whitelist">Игроки</a>
+			<a class="header-links" href="../banned">Заблокированные</a>
+		</div>
 		<h1>Правила сервера</h1>
 			<br><span class="rules_span">Чат</span></br>
 			<hr>
