--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -4,6 +4,12 @@
 		<script type="text/javascript" src="../js/sortabletable.js"></script>
 	</head>
 	<body>
+		<div class="header">
+			<a class="header-links" href="../rules">Правила</a>
+			<a class="header-links" href="../commands">Команды</a>
+			<a class="header-links" href="../whitelist">Игроки</a>
+			<a class="header-links" href="../banned">Заблокированные</a>
+		</div>
 		<h1>Список всех игроков в текущем белом списке</h1>
 		<table id="table">
 			<tr class="border_bottom">
