--- a/banned/index.html
+++ b/banned/index.html
@@ -9,7 +9,7 @@
 			<a class="header-links" href="../rules">Правила</a>
 			<a class="header-links" href="../commands">Команды</a>
 			<a class="header-links" href="../whitelist">Игроки</a>
-			<a class="header-links" href="../banned">Заблокированные</a>
+			<a class="header-links" href="">Заблокированные</a>
 		</div>
 		<h1>Список всех заблокированных игроков</h1>
 		<table id="table">
