--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -7,7 +7,7 @@
 		<div class="header">
 			<a class="header-links" href="../rules">Правила</a>
 			<a class="header-links" href="../commands">Команды</a>
-			<a class="header-links" href="../whitelist">Игроки</a>
+			<a class="header-links" href="">Игроки</a>
 			<a class="header-links" href="../banned">Заблокированные</a>
 		</div>
 		<h1>Список всех игроков в текущем белом списке</h1>
