--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>Список игроков</title>
 		<link rel="stylesheet" href="../css/main.css"/>
 		<script type="text/javascript" src="../js/sortabletable.js"></script>
 	</head>
