--- a/commands/index.html
+++ b/commands/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<div class="header">
 			<a class="header-links" href="../rules">Правила</a>
-			<a class="header-links" href="">Команды</a>
+			<a class="header-links" href="#">Команды</a>
 			<a class="header-links" href="../whitelist">Игроки</a>
 			<a class="header-links" href="../banned">Заблокированные</a>
 		</div>
