--- a/rules/index.html
+++ b/rules/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<a class="header-links" href="">Правила</a>
+			<a class="header-links" href="#">Правила</a>
 			<a class="header-links" href="../commands">Команды</a>
 			<a class="header-links" href="../whitelist">Игроки</a>
 			<a class="header-links" href="../banned">Заблокированные</a>
