--- a/commands/index.html
+++ b/commands/index.html
@@ -10,5 +10,6 @@
 			<a class="header-links" href="../whitelist">Игроки</a>
 			<a class="header-links" href="../banned">Заблокированные</a>
 		</div>
+		<h1>Coming soon</h1>
 	</body>
 </html>
