--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -20,124 +20,124 @@
 				<th onclick="sortTable(3)">Дата добавления</th>
 				</tr>
 			<tr class="border_bottom">
-				<td class="admin">Администратор</td>
+				<td class="admin"><span id="А">Администратор</span></td>
 				<td>_QMan</td>
 				<td>QMan#8191</td>
-				<td>-</td>
+				<td>11.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
-				<td class="mod">Модератор</td>
+				<td class="mod"><span id="М">Модератор</span></td>
 				<td class="angie">CarelessAngie</td>
 				<td>Angie Aome#4705</td>
-				<td>-</td>
+				<td>14.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>pruf</td>
 				<td>pruf#8502</td>
-				<td>-</td>
+				<td>14.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>SYHNR</td>
 				<td>YHN#7969</td>
-				<td>-</td>
+				<td>14.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>CESAAAR</td>
 				<td>Иностранный шпион Миль Папс#6863</td>
-				<td>-</td>
+				<td>14.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>papap1</td>
 				<td>f0r4g3m0n#3714</td>
-				<td>-</td>
+				<td>14.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>Schtil</td>
 				<td>Schtil#9230</td>
-				<td>-</td>
+				<td>14.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>Jusk</td>
 				<td>Сайтама | One-Punch Man#4504</td>
-				<td>-</td>
+				<td>14.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>Liinkarto</td>
 				<td>Liinkarto#6358</td>
-				<td>-</td>
+				<td>14.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>Vanlige</td>
 				<td>renicodav#2061</td>
-				<td>-</td>
+				<td>03.01.2020</td>
 			</tr>
 			<tr class="border_bottom">
 				<td class="mod">Модератор</td>
 				<td>ImrHeadCrabI</td>
 				<td>HeadCrab#3314</td>
-				<td>-</td>
+				<td>16.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>fredyfos</td>
 				<td>fredy#5549</td>
-				<td>-</td>
+				<td>18.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>n_altovsky</td>
 				<td>Nick Altovsky#2956</td>
-				<td>-</td>
+				<td>29.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>Psychoman</td>
 				<td>Psychoman#2404</td>
-				<td>-</td>
+				<td>01.01.2020</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>ArtemM</td>
 				<td>Artem M#2910</td>
-				<td>-</td>
+				<td>02.01.2020</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>BankRot</td>
 				<td>BankRot(ru)#3955</td>
-				<td>-</td>
+				<td>02.01.2020</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>Rad1ubit</td>
 				<td>Rad1ubit#0211</td>
-				<td>-</td>
+				<td>03.01.2020</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>eltyan</td>
 				<td>Акридерм#6054</td>
-				<td>-</td>
+				<td>05.01.2020</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>FAILD330</td>
 				<td>Faild333#2799</td>
-				<td>-</td>
+				<td>08.01.2020</td>
 			</tr>
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>_DAD42_</td>
 				<td>DAD42#6710</td>
-				<td>-</td>
+				<td>08.01.2020</td>
 			</tr>
 		</table>
 	</body>
