--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -80,7 +80,7 @@
 				<td>03.01.2020</td>
 			</tr>
 			<tr class="border_bottom">
-				<td class="mod">Модератор</td>
+				<td class="mod"><span id="М">Модератор</span></td>
 				<td>ImrHeadCrabI</td>
 				<td>HeadCrab#3314</td>
 				<td>16.12.2019</td>
