--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Список игроков</title>
+		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="../css/main.css"/>
 		<script type="text/javascript" src="../js/sortabletable.js"></script>
 	</head>
