--- a/rules/index.html
+++ b/rules/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Правила сервера</title>
+		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="../css/main.css"/>
 	</head>
 	<body>
