--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
 		<a class="link" href="rules">Правила сервера</a>
 		<a class="link" href="commands">Список команд</a>
+		<a class="link" href="dynmap">Динамическая карта</a>
 		<a class="link" href="whitelist">Список допущенных игроков</a>
 		<a class="link" href="banned">Заблокированные игроки</a>
 	</body>
