--- a/dynmap/index.html
+++ b/dynmap/index.html
@@ -1,3 +1,3 @@
-<head>
-<meta http-equiv="refresh" content="URL=http://213.32.7.18:8123" />
+<head> 
+  <meta http-equiv="refresh" content="0; URL=http://213.32.7.18:8123/" />
 </head>
