--- a/banned/index.html
+++ b/banned/index.html
@@ -9,6 +9,7 @@
 		<div class="header">
 			<a class="header-links" href="../rules">Правила</a>
 			<a class="header-links" href="../commands">Команды</a>
+			<a class="header-links" href="../dynmap">Динамическая карта</a>
 			<a class="header-links" href="../whitelist">Игроки</a>
 			<a class="header-links" href="#">Заблокированные</a>
 		</div>
