--- a/commands/index.html
+++ b/commands/index.html
@@ -8,6 +8,7 @@
 		<div class="header">
 			<a class="header-links" href="../rules">Правила</a>
 			<a class="header-links" href="#">Команды</a>
+			<a class="header-links" href="../dynmap">Динамическая карта</a>
 			<a class="header-links" href="../whitelist">Игроки</a>
 			<a class="header-links" href="../banned">Заблокированные</a>
 		</div>
