--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -9,6 +9,7 @@
 		<div class="header">
 			<a class="header-links" href="../rules">Правила</a>
 			<a class="header-links" href="../commands">Команды</a>
+			<a class="header-links" href="../dynmap">Динамическая карта</a>
 			<a class="header-links" href="#">Игроки</a>
 			<a class="header-links" href="../banned">Заблокированные</a>
 		</div>
