--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -10,7 +10,7 @@
 			<a class="header-links" href="../rules">Правила</a>
 			<a class="header-links" href="../commands">Команды</a>
 			<a class="header-links" href="../dynmap">Динамическая карта</a>
-			<a class="header-links" href="#">Допущенные игроки</a>
+			<a class="header-links" href="#">Список игроков</a>
 			<a class="header-links" href="../banned">Заблокированные</a>
 		</div>
 		<h1>Список всех игроков в текущем белом списке</h1>
