--- a/commands/index.html
+++ b/commands/index.html
@@ -9,8 +9,8 @@
 			<a class="header-links" href="../rules">Правила</a>
 			<a class="header-links" href="#">Команды</a>
 			<a class="header-links" href="../dynmap">Динамическая карта</a>
-			<a class="header-links" href="../whitelist">Игроки</a>
-			<a class="header-links" href="../banned">Заблокированные</a>
+			<a class="header-links" href="../whitelist">Список игроков</a>
+			<a class="header-links" href="../banned">Заблокированные игроки</a>
 		</div>
 		<h1>Coming soon</h1>
 	</body>
