--- a/banned/index.html
+++ b/banned/index.html
@@ -10,8 +10,8 @@
 			<a class="header-links" href="../rules">Правила</a>
 			<a class="header-links" href="../commands">Команды</a>
 			<a class="header-links" href="../dynmap">Динамическая карта</a>
-			<a class="header-links" href="../whitelist">Игроки</a>
-			<a class="header-links" href="#">Заблокированные</a>
+			<a class="header-links" href="../whitelist">Список игроков</a>
+			<a class="header-links" href="#">Заблокированные игроки</a>
 		</div>
 		<h1>Список всех заблокированных игроков</h1>
 		<table id="table">
