--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<link rel="stylesheet" href="/css/main.css"/>
 	</head>
 	<body>
-		<a class="link" href="rules">Правила сервера</a>
-		<a class="link" href="commands">Список команд</a>
+		<a class="link" href="rules">Правила</a>
+		<a class="link" href="commands">Команды</a>
 		<a class="link" href="dynmap">Динамическая карта</a>
-		<a class="link" href="whitelist">Игроки в белом списке</a>
+		<a class="link" href="whitelist">Список игроков</a>
 		<a class="link" href="banned">Заблокированные игроки</a>
 	</body>
 </html>
