--- a/rules/index.html
+++ b/rules/index.html
@@ -9,8 +9,8 @@
 			<a class="header-links" href="#">Правила</a>
 			<a class="header-links" href="../commands">Команды</a>
 			<a class="header-links" href="../dynmap">Динамическая карта</a>
-			<a class="header-links" href="../whitelist">Игроки</a>
-			<a class="header-links" href="../banned">Заблокированные</a>
+			<a class="header-links" href="../whitelist">Список игроков</a>
+			<a class="header-links" href="../banned">Заблокированные игроки</a>
 		</div>
 		<h1>Правила сервера</h1>
 			<br><span class="rules_span">Чат</span></br>
