--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -11,7 +11,7 @@
 			<a class="header-links" href="../commands">Команды</a>
 			<a class="header-links" href="../dynmap">Динамическая карта</a>
 			<a class="header-links" href="#">Список игроков</a>
-			<a class="header-links" href="../banned">Заблокированные</a>
+			<a class="header-links" href="../banned">Заблокированные игроки</a>
 		</div>
 		<h1>Список всех игроков в текущем белом списке</h1>
 		<table id="table">
