--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -4,6 +4,7 @@
 		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="../css/main.css"/>
 		<script type="text/javascript" src="../js/sortabletable.js"></script>
+		<script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
 	</head>
 	<body>
 		<div class="header">
