--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -175,8 +175,9 @@
             var tr = table.insertRow(-1);                   // TABLE ROW.
 
             for (var i = 0; i < col.length; i++) {
-                var th = document.createElement("th").onclick = function() { sortTable(3); };      // TABLE HEADER.
-                th.innerHTML = col[i];
+                var th = document.createElement("th");      // TABLE HEADER.
+                th.onclick = function() { alert('blah'); };
+				th.innerHTML = col[i];
                 tr.appendChild(th);
             }
 
