--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -176,7 +176,7 @@
 
             for (var i = 0; i < col.length; i++) {
                 var th = document.createElement("th");      // TABLE HEADER.
-                th.onclick = function() { sortTable(0); };
+                th.onclick = function() { sortTable(i); };
 				th.innerHTML = col[i];
                 tr.appendChild(th);
             }
