--- a/testing/index.html
+++ b/testing/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Testing</title>
+		<title>Testingds</title>
 		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="../css/main.css"/>
 		<script type="text/javascript" src="../js/sortabletable.js"></script>
