--- a/testing/index.html
+++ b/testing/index.html
@@ -10,15 +10,18 @@
                 <div id="docs-body">
                 <div id="sidebar"> 
                     <ul>
-                        <li id="category"> Doc about dog xd
+                        <li id="category">
                             <li>
-                                <a href="#home">Home</a>
+                                <a href="#rules">Правила</a>
                             </li>
                             <li>
-                                <a href="#first">About this not bad dog!</a>
+                                <a href="#commands">Команды</a>
                             </li>
                             <li>
-                                <a href="#madeby">Made By</a>
+                                <a href="#whitelist">Список игроков</a>
+                            </li>
+							<li>
+                                <a href="#banned">Заблокированные игроки</a>
                             </li>
                         </li>
                     </ul>
@@ -36,9 +39,10 @@
 	<script> 
                 json = 
                     [{
-                        "home":"<h1> This is Bad Docs </h1><h4>(Dog is not bad btw)</h4><img src='https://i.imgur.com/TXtxhbol.jpg' alt='Dog is not loaded :('>",
-                        "first":"<h2>Yeah this is dog </h2> <p> And its not mine</p>",
-                        "madeby":"<h3> made by yhn </h3> <img src='https://i.imgur.com/87hwoyg.jpg' alt='Non-loaded dog :('> <p> this is not home page dog</p>"
+                        "rules":"<h1>Правила сервера</h1><br><span class="rules_span">Чат</span></br><hr><ul><li>[1.1] Относись ко всем по доброму.</li><li>[1.2] Не спамь и не флуди.</li><li>[1.3] Запрещена реклама сторонних ресурсов в чате, если те не относятся к теме разговора.</li><li>[1.4] Пропаганда расизма, националистические высказывания, запрещены.</li><li>[1.5] Выполнение других форм проявления насмешек или угроз.</li></ul><br><span class="rules_span">Читы, моды или наборы ресурсов</span></br><hr><ul><li>[2.1] Запрещено использование каких-либо читов или модов, дающих преимущество перед другими игроками.</li><li>[2.2] Запрещены наборы ресурсов, которые как-либо помогают в поиске драгоценных ресурсов (X-Ray наборы ресурсов).</li><li>[2.3] Запрещены любые внешние программы, дающие потенциальное преимущество перед другими игроками.</li></ul><br><span class="rules_span">Игроки</span></br><hr><ul><li>[3.1] Запрещено размещение блоков или жидкостей, которые могут причинить вред игроку.</li><li>[3.2] Запрещено PvP без согласия двух сторон через внутриигровой чат.</li><li>[3.3] Запрещено воровство чужих вещей после смерти игрока.</li></ul><br><span class="rules_span">Постройки других игроков</span></br><hr><ul><li>[4.1] Запрещено разрушать частично или полностью чужие постройки без ведома владельца.</li><dd><ul><li>[4.1.1] Запрещено размещение или ломание блоков на территории строения без разрешения владельца.</li><li>[4.1.2] Запрещено преднамеренное размещение защищённых предметов на чужой территории без добавления игрока во владельцы.</li><li>[4.1.3] Запрещена преднамеренная застройка выходов из постройки.</li><li>[4.1.4] Запрещено размещение построек-ловушек рядом с чужими строениями без разрешения владельца.</li></ul></dd><li>[4.2] Запрещено брать предметы из сундуков, которые находятся на чужой территории, без разрешения владельца (в исключение входят только общественные фермы опыта или культур).</li></ul><br><span class="rules_span">Животные и/или другие не игровые персонажи</span></br><hr><ul><li>[5.1] Запрещено воровство или убийство чужих животных, которые находятся на чужой территории или рядом.</li><dd><ul><li>[5.1.1] Также запрещена кража сёдел, брони и/или ковров с животных.</li></ul></dd><li>[5.2] Запрещено разведение прирученных животных без уведомления владельца.</li><li>[5.3] Запрещено убивать или уводить деревенских жителей, находящихся на территории чужих построек.</li><li>[5.4] Запрещено разводить жителей без уведомления владельца.</li></ul>",
+                        "commands":"<h1>Coming soon</h1>",
+                        "whitelist":"<h3> made by yhn </h3> <img src='https://i.imgur.com/87hwoyg.jpg' alt='Non-loaded dog :('> <p> this is not home page dog</p>"
+                        "banned":"<h3> made by yhn </h3> <img src='https://i.imgur.com/87hwoyg.jpg' alt='Non-loaded dog :('> <p> this is not home page dog</p>"
                     }];
 
             function main() {
@@ -47,7 +51,7 @@
                     var anchor = document.location.href.split('#');
                         document.getElementById('viewer').innerHTML = json[0][`${anchor[1]}`];
                 } else {
-                    window.location.href = "#home";
+                    window.location.href = "#rules";
                 }
             }
 
