--- a/testing/index.html
+++ b/testing/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Testingds</title>
+		<title>Testing</title>
 		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="../css/main.css"/>
 		<script type="text/javascript" src="../js/sortabletable.js"></script>
@@ -31,33 +31,18 @@
 		</script>
 	</head>
     <body onload="main()">
-            <div id="page">
-                <div id="docs-body">
-                <div id="sidebar"> 
-                    <ul>
-                        <li id="category">
-                            <li>
-                                <a href="#rules">Правила</a>
-                            </li>
-                            <li>
-                                <a href="#commands">Команды</a>
-                            </li>
-                            <li>
-                                <a href="#whitelist">Список игроков</a>
-                            </li>
-							<li>
-                                <a href="#banned">Заблокированные игроки</a>
-                            </li>
-                        </li>
-                    </ul>
-                </div>
+		<div class="header">
+			<a class="header-links" href="#rules">Правила</a>
+			<a class="header-links" href="#commands">Команды</a>
+			<a class="header-links" href="../dynmap">Динамическая карта</a>
+			<a class="header-links" href="#whitelist">Список игроков</a>
+			<a class="header-links" href="#banned">Заблокированные игроки</a>
+		</div>
             
                     <div id="viewer">
                         <noscript>
                             <p> Your Browser is not support a <strong>Javascript</strong>!</p>
                         </noscript>
                     </div>
-            </div>
-        </div>
     </body>
 </html>
