--- a/testing/index.html
+++ b/testing/index.html
@@ -10,14 +10,14 @@
 		<div class="header">
 			<a class="header-links" href="#rules">Правила</a>
 			<a class="header-links" href="#commands">Команды</a>
-			<a class="header-links" href="http://213.32.7.18:8123/">Динамическая карта</a>
+			<a class="header-links" target="_blank" href="http://213.32.7.18:8123/">Динамическая карта</a>
 			<a class="header-links" href="#whitelist">Список игроков</a>
 			<a class="header-links" href="#banned">Заблокированные игроки</a>
 		</div>
             
 		<div id="viewer">
 			<noscript>
-				<p> Your Browser is not support a <strong>Javascript</strong>!</p>
+				<p> Ваш браузер не поддерживает <strong>JavaScript</strong>!</p>
 			</noscript>
 		</div>
 	</body>
