--- a/testing/index.html
+++ b/testing/index.html
@@ -21,7 +21,7 @@
             <!-- Also i made a page changing transition but i deleted this because its looks wierd	-->
 		<div id="viewer">
 			<noscript>
-				<p> Your Browser is not support a <strong>Javascript</strong>!</p>
+				<p> Ваш браузер не поддерживает <strong>Javascript</strong>!</p>
 			</noscript>
 		</div>
 	</body>
