--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -66,7 +66,7 @@
 			<tr class="border_bottom">
 				<td>Игрок</td>
 				<td>Jusk</td>
-				<td>Сайтама | One-Punch Man#4504</td>
+				<td>Theoryst [Йоу]#4504</td>
 				<td>14.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
@@ -79,7 +79,7 @@
 				<td>Игрок</td>
 				<td>Vanlige</td>
 				<td>renicodav#2061</td>
-				<td>03.01.2020</td>
+				<td>15.12.2019</td>
 			</tr>
 			<tr class="border_bottom">
 				<td class="mod"><span id="М">Модератор</span></td>
