--- a/index.html
+++ b/index.html
@@ -14,6 +14,25 @@
 			<a class="header-links" href="#/whitelist">Список игроков</a>
 			<a class="header-links" href="#/banned">Заблокированные игроки</a>
 			<a class="header-links" id="commandtab">Команды</a>
+ <nav style="display: none;">
+    <ul>
+      <li><a href="#">Миры</a>
+        <ul>
+          <li><a href="#">Версия 1.14</a>
+           <ul>
+              <li><a href="#">MEGA.NZ</a></li>
+              <li><a href="#">Google Drive</a></li>
+            </ul>
+          
+          </li>
+          <li><a href="#">Версия 1.15</a>
+            <ul>
+              <li><a href="#">MEGA.NZ</a></li>
+              <li><a href="#">Google Drive</a></li>
+            </ul>
+          </li>
+        </ul>
+  </nav>
 			<div id="commandlist"></div>
 			<script src="js/commandlist.js"></script>
 		</div>
@@ -23,6 +42,5 @@
 				<p> Ваш браузер не поддерживает <strong>Javascript</strong>!</p>
 			</noscript>
 		</div>
-		<footer>Website by QMan and YHN</footer>
 	</body>
 </html>
